# lmc-exercises

./: 01a_dynamics.ipynb  README.md  pyproject.toml
demos/: clf_cbf_filter.ipynb  sqp.ipynb
exercises/: 01a_dynamics.ipynb  01b_dynamics+JAX.ipynb  02_unconstrained_optimization.ipynb  03a_constrained_optimization_logbarrier.ipynb  03b_constraint_optimization_cvxpy.ipynb  04_control_barrier_function.ipynb  04a_control_barrier_function.ipynb
lmc_exercises.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
